<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobay</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="aide">Aide</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="numTel">Numéro de téléphone</string>
    <string name="mdp">Mot de passe</string>
    <string name="pseudo">Peudonyme (facultatif)</string>
    <string name="mdpAgain">Répéter le mot de passe</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="title_activity_main_menu">Menu d\'accueil</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="valider">Valider</string>
    <string name="envoiArgent">Envoi\nargent</string>
    <string name="demandeArgent">Demande\nargent</string>
    <string name="accepterDemandeArgent">Accepter demande argent</string>
    <string name="gererCompte">Gérer\ncompte</string>
    <string name="historique">Historique</string>
    <string name="gererIdentifiants">Gérer\nlogins</string>
    <string name="coopterAmi">Coopter\nun ami</string>
    <string name="deco">Déconnexion</string>
    <string name="title_activity_ids">IDsActivity</string>
    <string name="modifierMdp">Modifier mon mot de passe</string>
    <string name="modifierPseudo">Modifier mon pseudo</string>
    <string name="setParrain">Définir Parrain</string>	
    <string name="pseudoBrut">Pseudonyme</string>
    <string name="coopterThisAmi">Coopter cet ami!</string>
    <string name="nouveauMdp">Nouveau mot de passe</string>
    <string name="nouveauMdpAgain">Répéter le nouveau mot de passe</string>
    <string name="mdpActuel">Mot de passe actuel</string>
    <string name="title_activity_send_money">SendMoneyActivity</string>
    <string name="title_activity_send_money_nok">SendMoneyActivityNok</string>
    <string name="title_activity_send_money_ok">SendMoneyActivityOk</string>   
    <string name="title_activity_ask_for_money">Demander de l\'argent</string>
    <string name="title_activity_ask_for_money_nok">Demander de l\'argent \- erreur</string>
    <string name="title_activity_ask_for_money_ok">Demander de l\'argent \- yeah</string>
    <string name="title_activity_accept_money_request">Accepter Demande Argent</string>
    <string name="title_activity_accept_money_request_ok">Accepter Demande Argent OK</string>
    <string name="title_activity_manage_account">Gérer Mon Compte</string>   
    <string name="title_activity_manage_account_reload">Gérer Mon Compte - Recharger</string>
    <string name="title_activity_manage_account_reload_ok">Recharge effectuée</string>
    <string name="title_activity_manage_account_reload_validation">Recharger Validation</string>
    <string name="title_activity_manage_account_transfer">Gérer Mon Compte - Virer</string>
    <string name="title_activity_manage_account_transfer_ok">Virement effectué</string>
    <string name="title_activity_historic">Consulter l\'historique</string>
    <string name="title_activity_friend">Coopter un ami</string>
    <string name="pseudo_num">Numéro / Pseudo</string>
    <string name="date">Date</string>
    <string name="typeOp">Type d\'opération</string>
    <string name="montant">Montant</string>
    <string name="aidetxt">Pour plus d’informations concernant l’utilisation du service Monnaie Mobile,
        veuillez vous connecter sur le site www.moneymobile.com. Merci. </string>
    <color name="backgroundColor">#339c3c</color>
    <color name="greenColor">#8bc34a</color>
    <color name="txtColor">#ffffff</color>

</resources>