<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_main_menu"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonAccepterDemandeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDemandeArgentMenu"
        android:layout_below="@+id/buttonDemandeArgentMenu"
        android:minHeight="40dp"
        android:onClick="accepterDemande"
        android:text="@string/accepterDemandeArgent" />

    <Button
        android:id="@+id/buttonGererCompteMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonAccepterDemandeMenu"
        android:layout_below="@+id/buttonAccepterDemandeMenu"
        android:minHeight="40dp"
        android:onClick="gererCompte"
        android:text="@string/gererCompte" />

    <Button
        android:id="@+id/buttonHistoriqueMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonGererCompteMenu"
        android:layout_below="@+id/buttonGererCompteMenu"
        android:minHeight="40dp"
        android:onClick="historique"
        android:text="@string/historique" />

    <Button
        android:id="@+id/buttonGererIdentifiantsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonHistoriqueMenu"
        android:layout_below="@+id/buttonHistoriqueMenu"
        android:minHeight="40dp"
        android:onClick="gererIdentifiants"
        android:text="@string/gererIdentifiants" />

    <Button
        android:id="@+id/buttonCoopterAmiMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonGererIdentifiantsMenu"
        android:layout_below="@+id/buttonGererIdentifiantsMenu"
        android:minHeight="40dp"
        android:onClick="coopterAmi"
        android:text="@string/coopterAmi" />

    <Button
        android:id="@+id/buttonAideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCoopterAmiMenu"
        android:layout_below="@+id/buttonCoopterAmiMenu"
        android:minHeight="40dp"
        android:onClick="aide"
        android:text="@string/aide" />

    <Button
        android:id="@+id/buttonEnvoiArgentMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDemandeArgentMenu"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:minHeight="40dp"
        android:onClick="envoiArgent"
        android:text="@string/envoiArgent" />

    <Button
        android:id="@+id/buttonDemandeArgentMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEnvoiArgentMenu"
        android:layout_centerHorizontal="true"
        android:minHeight="40dp"
        android:onClick="demandeArgent"
        android:text="@string/demandeArgent" />

    <Button
        android:id="@+id/buttonDecoMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonAideMenu"
        android:layout_below="@+id/buttonAideMenu"
        android:minHeight="40dp"
        android:onClick="deconnexion"
        android:text="@string/deco" />

</RelativeLayout>
