<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/editTextNewMdpAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonModifyMdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/nouveauMdpAgain"
        android:inputType="textPassword"
        android:textColor="@color/txtColor"
        android:textColorHint="@color/greenColor" />

    <EditText
        android:id="@+id/editTextModifyPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonModifyPseudo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/pseudoBrut"
        android:textColor="@color/txtColor"
        android:textColorHint="@color/greenColor" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonModifyMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@xml/rounded_green"
        android:minWidth="230dip"
        android:onClick="modifierMdp"
        android:text="@string/modifierMdp"
        android:textColor="@color/txtColor" />

    <EditText
        android:id="@+id/editTextNewMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextNewMdpAgain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/nouveauMdp"
        android:inputType="textPassword"
        android:textColor="@color/txtColor"
        android:textColorHint="@color/greenColor" />

    <Button
        android:id="@+id/buttonModifyPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextNewMdp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:background="@xml/rounded_green"
        android:minWidth="230dip"
        android:onClick="modifierPseudo"
        android:text="@string/modifierPseudo"
        android:textColor="@color/txtColor" />

    <EditText
        android:id="@+id/editTextCurrentMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextNewMdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/mdpActuel"
        android:inputType="textPassword"
        android:textColor="@color/txtColor"
        android:textColorHint="@color/greenColor" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/gererIdentifiants"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/txtColor" />

</RelativeLayout>
